[gd_scene load_steps=12 format=2]

[ext_resource path="res://Resources/Textures/Environment/background.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Environment/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://Scenes/HelperScenes/PixelDynamicFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Resources/Audio/Music/Opalescence2.wav" type="AudioStream" id=4]
[ext_resource path="res://Resources/Textures/FX/playerLight.png" type="Texture" id=7]
[ext_resource path="res://Scripts/UI/MenuButton.gd" type="Script" id=8]
[ext_resource path="res://Scenes/MainScenes/Player.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/MainScenes/PointFactory.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scripts/UI/ButtonSelectionController.gd" type="Script" id=13]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 3.24999, 506 )

[sub_resource type="ParticlesMaterial" id=1]
emission_shape = 2
emission_box_extents = Vector3( 100, 25.021, 1 )
flag_disable_z = true
direction = Vector3( -7.829, 0, 0 )
spread = 138.1
gravity = Vector3( -1500, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 1.0
scale = 3.0
scale_random = 1.0

[node name="MainMenu" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="Sprite" parent="."]
modulate = Color( 0.0823529, 0.0823529, 0.0823529, 1 )
position = Vector2( -16, -22 )
scale = Vector2( 8.46875, 5 )
texture = ExtResource( 1 )
centered = false

[node name="Walls" type="Node2D" parent="."]

[node name="LeftWall" type="StaticBody2D" parent="Walls"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/LeftWall"]
position = Vector2( 0, 298.5 )
shape = SubResource( 2 )

[node name="RightWall" type="StaticBody2D" parent="Walls"]
position = Vector2( 1010, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/RightWall"]
position = Vector2( 12, 297 )
shape = SubResource( 2 )

[node name="TopWall" type="StaticBody2D" parent="Walls"]
position = Vector2( 820, -1 )
rotation = 1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/TopWall"]
position = Vector2( 0.500014, 308 )
shape = SubResource( 2 )

[node name="BottomWall" type="StaticBody2D" parent="Walls"]
position = Vector2( 850, 589 )
rotation = 1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/BottomWall"]
position = Vector2( 12.75, 342.957 )
shape = SubResource( 2 )

[node name="MenuCanvas" type="CanvasLayer" parent="."]
scale = Vector2( 0.15, 0.15 )
transform = Transform2D( 0.15, 0, 0, 0.15, 0, 0 )

[node name="ButtonSelectionController" type="Node2D" parent="MenuCanvas"]
script = ExtResource( 13 )
button_count = 5
is_active = true

[node name="MissionsButton" type="Button" parent="MenuCanvas/ButtonSelectionController"]
margin_left = 353.0
margin_top = 1000.0
margin_right = 2171.0
margin_bottom = 1546.0
custom_fonts/font = ExtResource( 3 )
text = "Missions"
flat = true
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}
button_index = 0

[node name="Light2D" type="Light2D" parent="MenuCanvas/ButtonSelectionController/MissionsButton"]
visible = false
position = Vector2( 384.583, 316.753 )
scale = Vector2( 5.2124, 0.604167 )
texture = ExtResource( 7 )
energy = 1.78

[node name="Particles2D" type="Particles2D" parent="MenuCanvas/ButtonSelectionController/MissionsButton"]
visible = false
position = Vector2( 900, 316.753 )
scale = Vector2( 6.667, 6.667 )
emitting = false
amount = 20
lifetime = 1.5
process_material = SubResource( 1 )

[node name="ChallengeButton" type="Button" parent="MenuCanvas/ButtonSelectionController"]
margin_left = 340.0
margin_top = 1606.67
margin_right = 3061.0
margin_bottom = 2152.67
custom_fonts/font = ExtResource( 3 )
text = "Challenge"
flat = true
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}
button_index = 1

[node name="Light2D" type="Light2D" parent="MenuCanvas/ButtonSelectionController/ChallengeButton"]
visible = false
position = Vector2( 384.583, 316.753 )
scale = Vector2( 5.2124, 0.604167 )
texture = ExtResource( 7 )
energy = 1.78

[node name="Particles2D" type="Particles2D" parent="MenuCanvas/ButtonSelectionController/ChallengeButton"]
visible = false
position = Vector2( 900, 316.753 )
scale = Vector2( 6.667, 6.667 )
emitting = false
amount = 20
lifetime = 1.5
process_material = SubResource( 1 )

[node name="OptionsButton" type="MenuButton" parent="MenuCanvas/ButtonSelectionController"]
margin_left = 353.333
margin_top = 2133.33
margin_right = 2339.33
margin_bottom = 2679.33
custom_fonts/font = ExtResource( 3 )
text = "Options"
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}
button_index = 2

[node name="Light2D" type="Light2D" parent="MenuCanvas/ButtonSelectionController/OptionsButton"]
visible = false
position = Vector2( 384.583, 316.753 )
scale = Vector2( 5.2124, 0.604167 )
texture = ExtResource( 7 )
energy = 1.78

[node name="Particles2D" type="Particles2D" parent="MenuCanvas/ButtonSelectionController/OptionsButton"]
visible = false
position = Vector2( 900, 316.753 )
scale = Vector2( 6.667, 6.667 )
emitting = false
amount = 20
lifetime = 1.5
process_material = SubResource( 1 )

[node name="OptionsPopup" type="Popup" parent="MenuCanvas/ButtonSelectionController/OptionsButton"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Sprite" parent="MenuCanvas/ButtonSelectionController/OptionsButton/OptionsPopup"]
modulate = Color( 0.0823529, 0.0823529, 0.0823529, 0.72549 )
position = Vector2( 0, 2 )
scale = Vector2( 7.99219, 4.67969 )
texture = ExtResource( 1 )
centered = false

[node name="HSlider" type="HSlider" parent="MenuCanvas/ButtonSelectionController/OptionsButton/OptionsPopup"]
visible = false
margin_right = 16.0
margin_bottom = 16.0

[node name="TutorialsButton" type="Button" parent="MenuCanvas/ButtonSelectionController"]
margin_left = 353.0
margin_top = 2707.0
margin_right = 1569.0
margin_bottom = 3253.0
custom_fonts/font = ExtResource( 3 )
text = "Tutorials"
flat = true
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}
button_index = 3

[node name="Light2D" type="Light2D" parent="MenuCanvas/ButtonSelectionController/TutorialsButton"]
visible = false
position = Vector2( 384.583, 316.753 )
scale = Vector2( 5.2124, 0.604167 )
texture = ExtResource( 7 )
energy = 1.78

[node name="Particles2D" type="Particles2D" parent="MenuCanvas/ButtonSelectionController/TutorialsButton"]
visible = false
position = Vector2( 900, 316.753 )
scale = Vector2( 6.667, 6.667 )
emitting = false
amount = 20
lifetime = 1.5
process_material = SubResource( 1 )

[node name="QuitButton2" type="Button" parent="MenuCanvas/ButtonSelectionController"]
margin_left = 333.333
margin_top = 3246.67
margin_right = 1549.33
margin_bottom = 3792.67
custom_fonts/font = ExtResource( 3 )
text = "Quit"
flat = true
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}
button_index = 4

[node name="Light2D" type="Light2D" parent="MenuCanvas/ButtonSelectionController/QuitButton2"]
visible = false
position = Vector2( 384.583, 316.753 )
scale = Vector2( 5.2124, 0.604167 )
texture = ExtResource( 7 )
energy = 1.78

[node name="Particles2D" type="Particles2D" parent="MenuCanvas/ButtonSelectionController/QuitButton2"]
visible = false
position = Vector2( 900, 316.753 )
scale = Vector2( 6.667, 6.667 )
emitting = false
amount = 20
lifetime = 1.5
process_material = SubResource( 1 )

[node name="OpalescenceLabel" type="Label" parent="MenuCanvas"]
margin_left = 2933.33
margin_top = 526.667
margin_right = 6244.33
margin_bottom = 826.667
custom_fonts/font = ExtResource( 3 )
text = "OPALESCENCE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." groups=["Points"] instance=ExtResource( 9 )]
position = Vector2( 700, 400 )
speed = 0.0
shrink_scalar = 0.9
gravity_radius = 200
respawn_position = Vector2( 700, 400 )
is_active = false
can_bomb = false
powerup_times = {
"Barrage": 5.0,
"Bombastic": 3.0,
"BulletTime": 1.0,
"GravityWell": 10.0,
"Incendiary": 5.0,
"Opalescence": 10.0,
"OpalescenceColorShift": 0.05,
"Unmaker": 10.0,
"Vision": 15.0
}
use_global_settings = false

[node name="PointFactory" parent="." instance=ExtResource( 11 )]
use_global_settings = false
left_bound = 600
right_bound = 900
up_bound = 300
down_bound = 500

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true

[connection signal="mouse_entered" from="MenuCanvas/ButtonSelectionController/MissionsButton" to="MenuCanvas/ButtonSelectionController/MissionsButton" method="mouse_entered"]
[connection signal="mouse_exited" from="MenuCanvas/ButtonSelectionController/MissionsButton" to="MenuCanvas/ButtonSelectionController/MissionsButton" method="mouse_exited"]
[connection signal="pressed" from="MenuCanvas/ButtonSelectionController/MissionsButton" to="." method="_on_ArcadeButton_pressed"]
[connection signal="mouse_entered" from="MenuCanvas/ButtonSelectionController/ChallengeButton" to="MenuCanvas/ButtonSelectionController/ChallengeButton" method="mouse_entered"]
[connection signal="mouse_exited" from="MenuCanvas/ButtonSelectionController/ChallengeButton" to="MenuCanvas/ButtonSelectionController/ChallengeButton" method="mouse_exited"]
[connection signal="pressed" from="MenuCanvas/ButtonSelectionController/ChallengeButton" to="." method="_on_ChallengeButton_pressed"]
[connection signal="mouse_entered" from="MenuCanvas/ButtonSelectionController/OptionsButton" to="MenuCanvas/ButtonSelectionController/OptionsButton" method="mouse_entered"]
[connection signal="mouse_exited" from="MenuCanvas/ButtonSelectionController/OptionsButton" to="MenuCanvas/ButtonSelectionController/OptionsButton" method="mouse_exited"]
[connection signal="mouse_entered" from="MenuCanvas/ButtonSelectionController/TutorialsButton" to="MenuCanvas/ButtonSelectionController/TutorialsButton" method="mouse_entered"]
[connection signal="mouse_exited" from="MenuCanvas/ButtonSelectionController/TutorialsButton" to="MenuCanvas/ButtonSelectionController/TutorialsButton" method="mouse_exited"]
[connection signal="pressed" from="MenuCanvas/ButtonSelectionController/TutorialsButton" to="." method="_on_TutorialsButton_pressed"]
[connection signal="mouse_entered" from="MenuCanvas/ButtonSelectionController/QuitButton2" to="MenuCanvas/ButtonSelectionController/QuitButton2" method="mouse_entered"]
[connection signal="mouse_exited" from="MenuCanvas/ButtonSelectionController/QuitButton2" to="MenuCanvas/ButtonSelectionController/QuitButton2" method="mouse_exited"]
[connection signal="pressed" from="MenuCanvas/ButtonSelectionController/QuitButton2" to="." method="_on_QuitButton_pressed"]
